--- a/index.html
+++ b/index.html
@@ -282,14 +282,39 @@
             </div>
             <div class="team-grid">
                 <article class="team-card">
+                    <div class="avatar icon-animate" aria-hidden="true">MH</div>
+                    <h3>Mahfujur Rahman</h3>
+                    <p>Administration</p>
+                </article>
+                <article class="team-card">
+                    <div class="avatar icon-animate" aria-hidden="true">NU</div>
+                    <h3>Nazim Uddin</h3>
+                    <p>App Developer</p>
+                </article>
+                <article class="team-card">
+                    <div class="avatar icon-animate" aria-hidden="true">JH</div>
+                    <h3>Jahid Hasan</h3>
+                    <p>Backend Engineer</p>
+                </article>
+                <article class="team-card">
+                    <div class="avatar icon-animate" aria-hidden="true">TR</div>
+                    <h3>Tarek Reza</h3>
+                    <p>Chief Technology Officer</p>
+                </article>
+                <article class="team-card">
                     <div class="avatar icon-animate" aria-hidden="true">MR</div>
                     <h3>Mashur Rahman</h3>
                     <p>Lead Sales & Marketing</p>
                 </article>
                 <article class="team-card">
-                    <div class="avatar icon-animate" aria-hidden="true">MH</div>
-                    <h3>Mahfujur Rahman</h3>
-                    <p>Administration</p>
+                    <div class="avatar icon-animate" aria-hidden="true">RI</div>
+                    <h3>Md Rafiqul Islam</h3>
+                    <p>Managing Director</p>
+                </article>
+                <article class="team-card">
+                    <div class="avatar icon-animate" aria-hidden="true">SN</div>
+                    <h3>Sabiqunnahar</h3>
+                    <p>QA Engineer</p>
                 </article>
                 <article class="team-card">
                     <div class="avatar icon-animate" aria-hidden="true">DS</div>
@@ -297,19 +322,19 @@
                     <p>Senior Backend Engineer</p>
                 </article>
                 <article class="team-card">
-                    <div class="avatar icon-animate" aria-hidden="true">TR</div>
-                    <h3>Tarek Reza</h3>
-                    <p>Tech Lead</p>
-                </article>
-                <article class="team-card">
                     <div class="avatar icon-animate" aria-hidden="true">TI</div>
                     <h3>Tanvirul Islam</h3>
                     <p>Senior Frontend Engineer</p>
                 </article>
                 <article class="team-card">
-                    <div class="avatar icon-animate" aria-hidden="true">NU</div>
-                    <h3>Nazim Uddin</h3>
-                    <p>App Developer</p>
+                    <div class="avatar icon-animate" aria-hidden="true">MS</div>
+                    <h3>Mohammad Tipu Sultan</h3>
+                    <p>Technical Lead Engineer</p>
+                </article>
+                <article class="team-card">
+                    <div class="avatar icon-animate" aria-hidden="true">SS</div>
+                    <h3>Sunny Sultan</h3>
+                    <p>UI/UX Developer</p>
                 </article>
             </div>
         </section>
