update new projects

--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ main {
                             <li>Restaurants manage catalogs, pricing, and real-time order queues</li>
                             <li>Support for table check-ins, loyalty, and delivery tracking</li>
                         </ul>
-                        <a class="link-out" href="https://foodcenter.titashsoft.com/" target="_blank" rel="noreferrer">foodcenter.titashsoft.com</a>
+                        <a class="link-out" href="https://sfcpartycenter.com" target="_blank" rel="noreferrer">sfcpartycenter.com</a>
                     </article>
                 </div>
             </div>
@@ -975,6 +975,35 @@ main {
                             <li>Courier tracking</li>
                             <li>Payment orchestration</li>
                         </ul>
+                        <a class="link-out" href="https://sfcpartycenter.com/" target="_blank" rel="noreferrer">sfcpartycenter.com</a>
+                    </article>
+                    <article class="project-card">
+                        <div class="project-meta">
+                            <span>Gift Order</span>
+                            <span>Medical field ops</span>
+                        </div>
+                        <h3>Gift Order System</h3>
+                        <p>An access-controlled workflow where pharma marketing reps log physician gift requests while admins govern limits, catalogs, and fulfillment.</p>
+                        <ul>
+                            <li>Role-based access for order collectors</li>
+                            <li>Exportable admin order lists</li>
+                            <li>Monthly gift limits & catalog configs</li>
+                        </ul>
+                        <a class="link-out" href="https://giftorder.titashsoft.com" target="_blank" rel="noreferrer">giftorder.titashsoft.com</a>
+                    </article>
+                    <article class="project-card">
+                        <div class="project-meta">
+                            <span>ZikrTap</span>
+                            <span>Dhikr companion</span>
+                        </div>
+                        <h3>ZikrTap: Dhikr & Tasbih</h3>
+                        <p>ZikrTap keeps daily tasbih on track with a calm, offline-first counter, multi-counter support, and privacy-friendly storage that never leaves the device.</p>
+                        <ul>
+                            <li>Tune goals (33/99/100+) with live progress</li>
+                            <li>Multiple counters with history & daily totals</li>
+                            <li>Minimal UI with dark mode, haptics, and sound control</li>
+                        </ul>
+                        <a class="link-out" href="https://apps.apple.com/us/app/zikrtap-dhikr-tasbih/id6757194562" target="_blank" rel="noreferrer">Download on App Store</a>
                     </article>
                     <article class="project-card">
                         <div class="project-meta">
@@ -988,6 +1017,7 @@ main {
                             <li>Team workspaces</li>
                             <li>Reader analytics</li>
                         </ul>
+                        <a class="link-out" href="https://play.google.com/store/apps/details?id=com.diatomicsoft.quotescreator" target="_blank" rel="noreferrer">View on Google Play</a>
                     </article>
                     <article class="project-card">
                         <div class="project-meta">
@@ -1001,6 +1031,7 @@ main {
                             <li>Citizen alerts</li>
                             <li>Offline kiosks</li>
                         </ul>
+                        <a class="link-out" href="https://smartbancharampur.com/" target="_blank" rel="noreferrer">smartbancharampur.com</a>
                     </article>
                     <article class="project-card">
                         <div class="project-meta">
@@ -1077,6 +1108,13 @@ main {
                         <div class="avatar" aria-hidden="true">TR</div>
                         <div>
                             <h3>Tarek Reza</h3>
+                            <p>Chief Technology Officer</p>
+                        </div>
+                    </article>
+                    <article class="team-card">
+                        <div class="avatar" aria-hidden="true">SK</div>
+                        <div>
+                            <h3>Shakib Khan</h3>
                             <p>Chief Technology Officer</p>
                         </div>
                     </article>
